[tool.poetry]
name = "scee-test-framework"
version = "0.1.0"
description = ""
authors = ["KurikoMoe <kurikomoe@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
coloredlogs = "^15.0.1"
pydantic = "^2.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
